<resources>
    <string name="app_name">Musical Gps</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chose_location">Choose a location</string>
    <string name="choose_location_text_edit">Choose a location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_music">New song</string>
    <string name="title_activity_maps_location">New song</string>
    <string name="music_title">Music title</string>
    <string name="song_path">Song file</string>
    <string name="default_song">Use as default song</string>
    <string name="add_also_location">Add also a location from below</string>
    <string name="add_song">Add song</string>
    <string name="choose_file">Choose a file</string>
    <string name="create_song_item_from_map_location_activity">Next</string>
    <string name="select_location">Select firstly a location</string>
    <string name="required_fields">Title and file are required</string>
    <string name="your_songs">Your songs</string>
    <string name="no_songs">No songs, create a new song</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
</resources>
